Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ClassCycle/ClassCycle1a.out
ClassCycle1b.java:6:1: compiler.err.cyclic.inheritance: ClassCycle1b
1 error
